# dtls-schc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.c  dtls-fields.h  dtls-rules.h  dtls_schc.c  dtls_schc.h  measure.c  schc-config.h  server.c
certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  server-cert.pem  server-key.pem  server.csr
libschc/: schc.h
rules/: dtls_rules_config.h
schc-mini/: schc_mini.c  schc_mini.h
test/: test.c
